--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "main": "./lib/index.js",
   "dependencies": {
-    "earlgrey-runtime": ">=0.0.11"
+    "earlgrey-runtime": ">=0.0.11",
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
     "earlgrey": ">=0.0.13",
