--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "type": "git",
     "url": "https://github.com/breuleux/quaint-nav"
   },
-  "keywords": [],
+  "keywords": [
+    "quaint",
+    "quaint-plugin"
+  ],
   "author": "Olivier Breuleux",
   "license": "MIT",
   "main": "./lib/index.js",
