--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "license": "MIT",
   "main": "./lib/index.js",
   "dependencies": {
-    "earlgrey-runtime": ">=0.0.12",
-    "lodash": "^3.10.1"
+    "earlgrey-runtime": "^0.1.0"
   },
   "devDependencies": {
-    "earlgrey": ">=0.0.13",
-    "mocha": "^2.2.1",
-    "earl-mocha": ">=0.0.3"
+    "earl-mocha": ">=0.0.3",
+    "earlgrey": "^0.1.0",
+    "mocha": "^2.2.1"
   },
   "scripts": {
     "refresh": "earl compile -5vso lib/ src/",
